--- a/contracts/package.json
+++ b/contracts/package.json
@@ -55,6 +55,9 @@
     "hardhat": "hardhat"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^4.8.0"
+    "@openzeppelin/contracts": "^4.8.0",
+    "dotenv": "^16.0.3",
+    "ethereum-input-data-decoder": "^0.4.2",
+    "prompts": "^2.4.2"
   }
 }
