--- a/contracts/package.json
+++ b/contracts/package.json
@@ -15,6 +15,7 @@
   ],
   "devDependencies": {
     "@chainlink/contracts": "^0.5.1",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.6",
     "@nomiclabs/hardhat-ethers": "^2.0.5",
     "@nomiclabs/hardhat-etherscan": "^3.0.3",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
@@ -58,7 +59,6 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.8.0",
-    "dotenv": "^16.0.3",
     "ethereum-input-data-decoder": "^0.4.2",
     "prompts": "^2.4.2"
   }
