--- a/contracts/tsconfig.json
+++ b/contracts/tsconfig.json
@@ -17,7 +17,8 @@
     "./src",
     "./utils",
     "./types",
-    "./data"
+    "./data",
+    "./abis"
   ],
   "files": ["./hardhat.config.ts"]
 }
